<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PatientAPP</string>

    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="button">Login</string>
    <string name="description">Name</string>
    <string name="note">Description</string>
    <string name="username">UserName</string>
    <string name="welcome">Welcome </string>
    <string name="name">Name</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="emergency">Emergency</string>
    <string name="title_activity_patient__map">Map</string>
    <string name="back">BACK</string>
    <string name="nabps">NAbps</string>
    <string name="todo">TODO</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
