<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mpk.melwin.patientapp.ProfileActivity">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/profileImage"
        android:layout_below="@+id/username"
        android:src="@mipmap/ic_default_user"
        android:layout_marginBottom="20sp" android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/mapbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profileImage"
        android:text="@string/map" />

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mapbutton"
        android:text="@string/logout" />

    <Button
        android:id="@+id/emergencybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logoutbutton"
        android:text="@string/emergency" />

    <TextView
        android:id="@+id/pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/nabps"
        android:textSize="90sp"
        android:textStyle="bold" />
</RelativeLayout>
