<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mpk.melwin.patientapp.LoginActivity">

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profileImage"
        android:layout_marginTop="85dp"
        android:text="@string/signin" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:text="@string/button"
        tools:text="LOGIN" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pswd"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/descp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/note"
        android:inputType="textMultiLine" />

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/profileImage"
        android:layout_below="@+id/descp"
        android:src="@mipmap/ic_default_user"
        android:layout_marginBottom="20sp"/>
</RelativeLayout>
